--- a/.gitignore
+++ b/.gitignore
@@ -84,5 +84,5 @@ tmp/debug_kit.sqlite
 webroot/royslog.txt
 src/Controller/logs/debug.log
 *.log
-webroot/img/clients/750857_605975.jpeg
+webroot/img/clients/*.jpeg
 *.zip
